# api-maribel

./: .gitignore  Dockerfile  manage.py  pyproject.toml  requirements.txt  run.sh
api_maribel/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_rename_essayoriginaltext_originalessaytext_and_more.py  0003_remove_skill_feedback_remove_skill_grade.py  0004_alter_theme_title.py  0005_rename_creation_date_feedback_creation_datetime_and_more.py  0006_alter_skill_skill_description.py
core/templates/: activate.html  base_generic.html  password_reset_confirm.html
src/: app.py
src/image_to_text/: image_to_text_controller.py
src/users/: user.py  user_controller.py
